# ticking-timer

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yaml
.github/workflows/: automerge.yaml  validate.yaml
src/: lib.rs
